Fixed Overflow Issue

--- a/src/Components/Timeline/Timeline.module.css
+++ b/src/Components/Timeline/Timeline.module.css
@@ -15,6 +15,7 @@
     width: 100%;
     min-height: 100vh;
     z-index: 0;
+    overflow: hidden;
 }
 
 .card {
